@@ -681,14 +681,15 @@ task.obj: task.cc \
   task.h
 util.obj: util.cc \
   ../../include/util.h \
+  ../../include/distrib.h \
   ../../include/cenvir.h \
   ../../include/cmodule.h \
-  ../../include/csimul.h \
   ../../include/macros.h \
   ../../include/cexception.h \
   ../../include/cwatch.h \
   ../../include/cpacket.h \
   ../../include/defs.h \
+  ../../include/random.h \
   ../../include/cpar.h \
   ../../include/cobject.h \
   ../../include/ccoroutine.h \
@@ -696,6 +697,7 @@ util.obj: util.cc \
   ../../include/carray.h \
   ../../include/cqueue.h \
   ../../include/cgate.h \
+  ../../include/csimul.h \
   ../../include/errmsg.h \
   ../../include/cmsgheap.h \
   ../../include/coutvect.h \
