@@ -72,6 +72,7 @@ double gamma_d(double alpha, double beta, int rng)
     }
     else if (alpha < 1.0)
     {
+        // FIXME bogus code -- does not even contain beta!!!
         double b = (M_E + alpha) / M_E;
 
         double Y;
@@ -103,6 +104,7 @@ double gamma_d(double alpha, double beta, int rng)
     }
     else // if (alpha > 1.0)
     {
+        // FIXME bogus code -- does not even contain beta!!!
         double a = 1.0 / sqrt(2.0 * alpha - 1);
         double b = alpha - log(4.0);
         double q = alpha + 1.0 / a;
