@@ -3,76 +3,392 @@ network = dist
 
 [Parameters]
 dist.n=100000
+dist.discrete=false  # default for the cont. distrs.
 dist.numcells=100
 dist.firstvals=1000
+dist.file="" # automatic filename
 
-
+#----------------------------------------------------------------------
+# CONTINUOUS
+#----------------------------------------------------------------------
 
 #
-# normal
+# uniform :)
 #
 [Run 1]
-dist.variate=normal(0,1)
-dist.excel="NORMDIST(A%d,0,1,0)"
-dist.file="normal_1.csv"
+dist.variate=uniform(0,1)
+dist.excel="1"
 # -->OK
 
 [Run 2]
-dist.variate=normal(5,3)
-dist.excel="NORMDIST(A%d,5,3,0)"
-dist.file="normal_2.csv"
+dist.variate=uniform(-3,7)
+dist.excel="0.1"
 # -->OK
 
+
+#
+# normal, truncnormal
+#
+[Run 10]
+dist.variate=normal(0,1)
+dist.excel="NORMDIST(A%d,0,1,0)"
+# -->OK
+
+[Run 11]
+dist.variate=normal(5,3)
+dist.excel="NORMDIST(A%d,5,3,0)"
+# -->OK
+
+[Run 12]
+dist.variate=truncnormal(0,1)
+dist.excel="IF(NORMDIST(A%d,0,1,0)<0,0,NORMDIST(A%d,0,1,0)/(1-NORMDIST(0,0,1,1)))"
+# -->OK
+
+[Run 13]
+dist.variate=truncnormal(0,4)
+dist.excel="IF(NORMDIST(A%d,0,4,0)<0,0,NORMDIST(A%d,0,4,0)/(1-NORMDIST(0,0,1,1)))"
+# -->OK
+
+[Run 14]
+dist.variate=truncnormal(-1,1)
+dist.excel="IF(NORMDIST(A%d,-1,1,0)<0,0,NORMDIST(A%d,-1,1,0)/(1-NORMDIST(1,0,1,1)))"
+# -->OK
 
 
 #
 # exponential
 #
-[Run 10]
+[Run 20]
 dist.variate=exponential(3)
 dist.excel="EXPONDIST(A%d,1/3,0)"
-dist.file="expon_1.csv"
 # -->OK
-
 
 
 #
 # gamma
 #
-[Run 20]
+[Run 30]
 dist.variate=gamma_d(1,1)
 dist.excel="GAMMADIST(A%d,1,1,0)"
-dist.file="gamma_1.csv"
-# -->OK
+# -->OK (since alpha=1, this is exponential dist)
 
-[Run 21]
+[Run 31]
+dist.variate=gamma_d(1,5)
+dist.excel="GAMMADIST(A%d,1,5,0)"
+# -->OK (since alpha=1, this is exponential dist)
+
+[Run 32]
+dist.variate=gamma_d(0.6,1)
+dist.excel="GAMMADIST(A%d,0.6,1,0)"
+dist.n=500000
+# -->MISMATCH! the graph clearly breaks at 1.0!
+#    for x<1 it is above, for x>1 it is below the GAMMADIST function
+
+[Run 33]
+dist.variate=gamma_d(0.6,5)
+dist.excel="GAMMADIST(A%d,0.6,5,0)"
+# -->MISMATCH! the implementation doesn't even refer to beta!
+
+[Run 34]
 dist.variate=gamma_d(3,1)
 dist.excel="GAMMADIST(A%d,3,1,0)"
-dist.file="gamma_2.csv"
 # -->OK
 
-[Run 22]
-dist.variate=gamma_d(2.3,1)
-dist.excel="GAMMADIST(A%d,2.3,1,0)"
-dist.file="gamma_3.csv"
+[Run 35]
+dist.variate=gamma_d(3,5)
+dist.excel="GAMMADIST(A%d,3,5,0)"
+# -->MISMATCH! the implementation doesn't even refer to beta!
+
+
+#
+# erlang
+#
+[Run 40]
+dist.variate=erlang_k(1,1)
+dist.excel="GAMMADIST(A%d,1,1,0)"
 # -->OK
 
-[Run 23]
-dist.variate=gamma_d(1,2.5)
-dist.excel="GAMMADIST(A%d,1,2.5,0)"
-dist.file="gamma_4.csv"
+[Run 41]
+dist.variate=erlang_k(1,100)
+dist.excel="GAMMADIST(A%d,1,100,0)"
 # -->OK
 
-[Run 24]
-dist.variate=gamma_d(2,2.5)
-dist.excel="GAMMADIST(A%d,2,2.5,0)"
-dist.file="gamma_5.csv"
-# -->FAIL!
+[Run 42]
+dist.variate=erlang_k(5,1)
+dist.excel="GAMMADIST(A%d,5,1,0)"
+# -->MISMATCH! GAMMADIST is a lot flatter than what we measure
 
-[Run 25]
-dist.variate=gamma_d(2.3,4.1)
-dist.excel="GAMMADIST(A%d,2.3,4.1,0)"
-dist.file="gamma_6.csv"
-# --> FAIL!
+[Run 43]
+dist.variate=erlang_k(5,100)
+dist.excel="GAMMADIST(A%d,5,10,0)"
+# -->MISMATCH! our graph is flatter than GAMMADIST
 
+
+#
+# triang
+#
+[Run 50]
+dist.variate=triang(0,0.3,1)
+dist.excel="0"
+# -->OK
+
+[Run 51]
+dist.variate=triang(0,0,1)
+dist.excel="0"
+# -->OK
+
+[Run 52]
+dist.variate=triang(0,1,1)
+dist.excel="0"
+# -->OK
+
+[Run 53]
+dist.variate=triang(-1,4,5)
+dist.excel="0"
+# -->OK
+
+
+#
+# lognormal
+#
+[Run 60]
+dist.variate=lognormal(0,1)
+dist.excel="0"
+# --> no lognormal pdf in Excel
+
+
+#
+# Weibull
+#
+# Graphs match for a=b, but not otherwise. Maybe we're using different
+# parameters than excel???
+#
+[Run 70]
+dist.variate=weibull(1,3)
+dist.excel="WEIBULL(A%d,1,3,0)"
+# -->MISMATCH!
+
+[Run 71]
+dist.variate=weibull(3,3)
+dist.excel="WEIBULL(A%d,3,3,0)"
+# -->OK
+
+[Run 72]
+dist.variate=weibull(5,5)
+dist.excel="WEIBULL(A%d,5,5,0)"
+# -->OK
+
+[Run 73]
+dist.variate=weibull(4,2)
+dist.excel="WEIBULL(A%d,4,2,0)"
+# -->MISMATCH!
+
+[Run 74]
+dist.variate=weibull(5,1)
+dist.excel="WEIBULL(A%d,5,1,0)"
+# -->MISMATCH!
+
+[Run 75]
+dist.variate=weibull(2,3)
+dist.excel="WEIBULL(A%d,2,3,0)"
+# -->MISMATCH!
+
+
+#
+# beta
+#
+[Run 100]
+dist.variate=beta(1,1)
+dist.excel="BETADIST(A%d,1,1)" # wrong --> this is the cdf
+
+
+#
+# chi-squared
+#
+# the code seems to be inconsistent for even and odd k's wrt the second
+# param of erlang/gamma.
+#
+[Run 110]
+dist.variate=chi_square(1)
+dist.excel="CHIDIST(A%d,1)"
+# -->MISMATCH! (slight but visible)
+
+[Run 111]
+dist.variate=chi_square(2)
+dist.excel="CHIDIST(A%d,2)"
+# -->MISMATCH!
+
+[Run 112]
+dist.variate=chi_square(3)
+dist.excel="CHIDIST(A%d,3)"
+# -->MISMATCH!
+
+
+#
+# student-t
+#
+# note: excel is wrong here, it always creates 2-tailed distrib,
+# regardless of its "tails" parameter, and also it seemingly doesn't
+# integrate to 1!
+#
+[Run 120]
+dist.variate=student_t(5)
+dist.excel="TDIST(ABS(A%d),5,1)/2"
+# -->MISMATCH!
+
+[Run 121]
+dist.variate=student_t(3)
+dist.excel="TDIST(ABS(A%d),3,1)/2"
+# -->MISMATCH!
+
+#
+# cauchy
+#
+[Run 130]
+dist.variate=cauchy(3,1)
+dist.excel="0"
+
+[Run 131]
+dist.variate=cauchy(3,2) -- this crashes the histogram class
+dist.excel="0"
+
+#----------------------------------------------------------------------
+# DISCRETE
+#----------------------------------------------------------------------
+
+#
+# intuniform
+#
+[Run 510]
+dist.variate=intuniform(0,9)
+dist.excel="0.1"
+dist.discrete=true
+dist.numcells=12
+# -->OK
+
+#
+# bernoulli
+#
+[Run 520]
+dist.variate=bernoulli(0.2)
+dist.excel="if(A%=0,0.2,0.8)"
+dist.discrete=true
+dist.numcells=2
+# -->OK
+
+#
+# binomial
+#
+[Run 530]
+dist.variate=binomial(1, 0.2)
+dist.excel="BINOMDIST(A%d,1,0.2,0)"
+dist.discrete=true
+dist.numcells=5
+# -->OK
+
+[Run 531]
+dist.variate=binomial(10,0.2)
+dist.excel="BINOMDIST(A%d,10,0.2,0)"
+dist.discrete=true
+dist.numcells=15
+# -->OK
+
+[Run 532]
+dist.variate=binomial(10,0)
+dist.excel="BINOMDIST(A%d,10,0,0)"
+dist.discrete=true
+dist.numcells=15
+# -->OK
+
+[Run 533]
+dist.variate=binomial(10,1)
+dist.excel="BINOMDIST(A%d,10,1,0)"
+dist.discrete=true
+dist.numcells=15
+# -->OK
+
+#
+# geometric
+#
+[Run 540]
+dist.variate=geometric(0.2)
+dist.excel="NEGBINOMDIST(A%d,1,0.2)"
+dist.discrete=true
+dist.numcells=20
+# -->OK
+
+[Run 541]
+dist.variate=geometric(0.8)
+dist.excel="NEGBINOMDIST(A%d,1,0.8)"
+dist.discrete=true
+dist.numcells=20
+# -->OK
+
+#
+# negbinomial
+#
+[Run 550]
+dist.variate=negbinomial(5,0.2)
+dist.excel="NEGBINOMDIST(A%d,5,0.2)"
+dist.discrete=true
+dist.numcells=20
+# -->OK
+
+#
+# hypergeometric
+#
+# excel has different parameters: if we have (a,b,n), it expects (n,a,a+b)
+#
+# here we cannot test because hypergeometric is broken!
+#
+[Run 560]
+dist.variate=hypergeometric(5,5,1)
+dist.excel="HYPGEOMDIST(A%d,1,5,10)"
+dist.discrete=true
+dist.numcells=20
+
+[Run 561]
+dist.variate=hypergeometric(5,5,2)
+dist.excel="HYPGEOMDIST(A%d,2,5,10)"
+dist.discrete=true
+dist.numcells=20
+
+[Run 62]
+dist.variate=hypergeometric(0,10,1)
+dist.excel="HYPGEOMDIST(A%d,1,0,10)"
+dist.discrete=true
+dist.numcells=20
+
+#
+# poisson
+#
+# we use different algorithms under 30 and above 30
+#
+[Run 570]
+dist.variate=poisson(5)
+dist.excel="POISSON(A%d,5,0)"
+dist.discrete=true
+dist.numcells=20
+# -->OK
+
+[Run 571]
+dist.variate=poisson(29)
+dist.excel="POISSON(A%d,29,0)"
+dist.discrete=true
+dist.numcells=20
+# -->OK
+
+[Run 572]
+dist.variate=poisson(31)
+dist.excel="POISSON(A%d,31,0)"
+dist.discrete=true
+dist.numcells=20
+# -->MISMATCH! POISSON's peak is 0.07, ours is 0.08
+
+[Run 573]
+dist.variate=poisson(50)
+dist.excel="POISSON(A%d,50,0)"
+dist.discrete=true
+dist.numcells=20
+# -->MISMATCH! POISSON's peak is 0.056, ours is 0.063
 
